# LibMath

./: CMakeLists.txt  README.md
LibMath/: CMakeLists.txt
LibMath/Header/LibMath/: Arithmetic.h  Collisions.h  GeometricObject2.h  GeometricObject3.h  LibMathFwd.h  Quaternion.h  Trigonometry.h
LibMath/Header/LibMath/Angle/: Radian.h
LibMath/Header/LibMath/Matrix/: Matrix2.h  Matrix3.h  Matrix4.h
LibMath/Header/LibMath/Vector/: Vector2.h  Vector3.h  Vector4.h
LibMath/Source/: Angle.cpp  Arithmetic.cpp  Collisions.cpp  GeometricObject2.cpp  GeometricObject3.cpp  Matrix.cpp  Quaternion.cpp  Vector.cpp
UnitTest/: CMakeLists.txt
UnitTest/Source/: Angle_UnitTest.cpp  GeometricObject2_UnitTest.cpp  GeometricObject3_UnitTest.cpp  Main.cpp  Matrix_UnitTest.cpp  Quaternion_UnitTest.cpp  Trigonometry_UnitTest.cpp  Vector_UnitTest.cpp
